--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,403 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Oswald', sans-serif;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
+.header__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px 0;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.header__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 620px;
+  width: 100%;
+}
+
+.header__contacts a {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  color: #d44343;
+  margin-top: 10px;
+}
+
+.header__adr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-width: 255px;
+}
+
+.header__adr-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.header__adr-icon img {
+  width: 100%;
+}
+
+.header__adr-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  width: 230px;
+  color: #191919;
+}
+
+.header__call {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-width: 145px;
+}
+
+.header__call-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.header__call-icon img {
+  width: 100%;
+}
+
+.header__call-tel {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: #191919;
+}
+
+.header__search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__search-input {
+  margin-right: 40px;
+  position: relative;
+}
+
+.header__search-input img {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.header__search-input input {
+  width: 335px;
+  height: 40px;
+  background: #f6f6f6;
+  border: none;
+  border-radius: 3px;
+  padding: 0 17px;
+}
+
+.header__search-input input::-webkit-input-placeholder {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #cccaca;
+  margin-left: 17px;
+}
+
+.header__search-input input:-ms-input-placeholder {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #cccaca;
+  margin-left: 17px;
+}
+
+.header__search-input input::-ms-input-placeholder {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #cccaca;
+  margin-left: 17px;
+}
+
+.header__search-input input::placeholder {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #cccaca;
+  margin-left: 17px;
+}
+
+.header__bookmarks {
+  width: 30px;
+  height: 30px;
+  margin-right: 25px;
+}
+
+.header__bookmarks img {
+  width: 100%;
+}
+
+.header__cart {
+  width: 30px;
+  height: 30px;
+}
+
+.header__cart img {
+  width: 100%;
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.header-nav a {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #191919;
+}
+
+.slider-top {
+  height: 700px;
+  max-width: 1240px;
+  width: 100%;
+}
+
+.slider-top__item {
+  position: relative;
+  z-index: 1;
+}
+
+.slider-top__item-text {
+  position: absolute;
+  z-index: 5;
+  top: 155px;
+  left: 70px;
+  width: 430px;
+  text-align: center;
+  color: #191919;
+}
+
+.slider-top__item-text h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 86px;
+  text-transform: uppercase;
+  margin: 0 0 40px;
+}
+
+.slider-top__item-text p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+
+.slider-top__item-text span {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  color: #d44343;
+}
+
+.slider-top__link {
+  margin: 50px auto;
+  display: block;
+  width: 160px;
+  height: 50px;
+  border: 1px dashed #191919;
+  padding: 12px 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.slider-top__link a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #191919;
+}
+
+.slider-top__prev {
+  left: 30px;
+}
+
+.slider-top__next {
+  left: 80px;
+}
+
+.slider-top__arrows {
+  position: absolute;
+  bottom: 20px;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-top__arrows img {
+  width: 16px;
+  height: 16px;
+}
+
+.slider-brand {
+  border: 1px solid #eaeaea;
+  margin: 50px 0;
+}
+
+.slider-brand__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180px;
+  height: 100px;
+  border-left: 1px solid #eaeaea;
+  position: relative;
+  padding: 10px 0;
+}
+
+.slider-brand__img img {
+  display: block;
+  max-width: 130px;
+  width: 100%;
+  height: auto;
+}
+
+.slider-news {
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.slider-news h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+  font-weight: 500;
+  color: #cccaca;
+  margin: 0 auto 50px;
+  width: 125px;
+}
+
+.slider-new {
+  width: 100%;
+  padding-bottom: 55px;
+}
+
+.slider-new p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13px;
+  margin: 20px 0;
+}
+
+.slider-new span {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.slider-new__arrows {
+  position: absolute;
+  top: -80px;
+  right: 0;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-new__arrows img {
+  width: 16px;
+  height: 16px;
+}
+
+.slider-new__prev {
+  right: 60px;
+}
 /*# sourceMappingURL=main.css.map */
