--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,12 @@
-* {
-	box-sizing: border-box;
-}
+// Basic setting
+
+@import 'grid';
+@import 'vars';
+
+// Blocks
+@import 'header';
+@import 'slider-top';
+@import 'slider-brand';
+@import 'slider-new';
+
+@import 'footer'
