--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,11 @@
 
 // Blocks
 @import 'header';
+@import 'burger';
 @import 'slider-top';
 @import 'slider-brand';
 @import 'slider-new';
 
-@import 'footer'
+@import 'footer';
+
+@import 'media'
