--- a/scss/_slider-new.scss
+++ b/scss/_slider-new.scss
@@ -18,6 +18,16 @@
 .slider-new {
 	width: 100%;
 	padding-bottom: 55px;
+}
+
+.slider-new__item {
+	width: 100%;
+}
+
+.slider-new__card {
+	position: relative;
+	margin: 0 auto;
+	width: 300px;
 
 	& p {
 		font-family: 'Montserrat', sans-serif;
@@ -31,6 +41,7 @@
 		font-weight: 700;
 	}
 }
+
 
 .slider-new__arrows {
 	position: absolute;
