--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,9 @@
 @import 'slider-top';
 @import 'slider-brand';
 @import 'slider-new';
+@import 'slider-trend';
+@import 'trend';
 
 @import 'footer';
 
-@import 'media'
+@import 'media';
