--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -80,4 +80,13 @@
 		margin: 0 auto 40px;
 	}
 
+	.slider-brand__img {
+		margin: 0 auto;
+	}
+}
+
+@media (max-width: 368px) {
+	.slider-brand__img {
+		border-left: none;
+	}
 }
