--- a/scss/_slider-new.scss
+++ b/scss/_slider-new.scss
@@ -3,13 +3,13 @@
 .slider-news {
 	border-bottom: 1px solid $gray;
 	width: 100%;
-	margin-bottom: 50px;
+	margin-bottom: 70px;
 
 	& h2 {
 		font-family: 'Montserrat', sans-serif;
-		font-size: 25px;
-		font-weight: 500;
-		color: $dark-gray;
+		font-size: 30px;
+		font-weight: 400;
+		color: $black;
 		margin: 0 auto 50px;
 		width: 125px;
 	}
