--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,9 @@
 @import 'slider-new';
 @import 'slider-trend';
 @import 'trend';
+@import 'collection';
+@import 'descr';
+@import 'subscribe';
 
 @import 'footer';
 
