--- a/scss/_subscribe.scss
+++ b/scss/_subscribe.scss
@@ -1,25 +1,20 @@
 // main: main.scss
 
 .subscribe {
-	position: relative;
-	height: auto;
-
-	& img {
-		width: 100%;
-	}
-}
-
-.subsribe__wrap {
+	background-image: url(../img/subscribe-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 280px;
 	width: 100%;
-	position: absolute;
-	top: -160px;
 }
 
 .subscribe__items {
-	position: relative;
+	position: absolute;
+	top: 70px;
 	width: 100%;
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
 	z-index: 5;
 }
 
@@ -33,4 +28,32 @@
 	& p {
 		font-size: 14px;
 	}
+}
+
+.subscribe__form {
+
+	& input {
+		width: 445px;
+		height: 55px;
+		background-color: #ffffff;
+		padding: 0 20px;
+
+		&::placeholder {
+			font-family: 'Montserrat', sans-serif;
+			font-size: 14px;
+			color: $descr;
+		}
+	}
+}
+
+.subscribe__form-mail::after {
+	position: absolute;
+	content: "";
+	color: #ffffff;
+	width: 20px;
+	height: 20px;
+	background-image: url(../img/send.svg);
+	top: 45px;
+	right: 75px;
+	z-index: 5;
 }
