--- a/css/main.css
+++ b/css/main.css
@@ -638,6 +638,28 @@ a {
   font-size: 14px;
 }
 
+.subscribe__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.subscribe__form img {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 24px;
+  right: 75px;
+  z-index: 5;
+}
+
 .subscribe__form input {
   width: 445px;
   height: 55px;
@@ -669,16 +691,33 @@ a {
   color: #3d3d3d;
 }
 
-.subscribe__form-mail::after {
-  position: absolute;
-  content: "";
-  color: #ffffff;
-  width: 20px;
-  height: 20px;
-  background-image: url(../img/send.svg);
-  top: 45px;
-  right: 75px;
-  z-index: 5;
+.subscribe__form-police {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+}
+
+.subscribe__form-police input {
+  width: 10px;
+  height: 10px;
+}
+
+.subscribe__form-police label {
+  margin-left: 15px;
+}
+
+.subscribe__form-police a {
+  color: #cccaca;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  margin-bottom: 3px;
 }
 
 .footer {
