--- a/css/main.css
+++ b/css/main.css
@@ -631,7 +631,8 @@ a {
   font-family: 'Montserrat', sans-serif;
   font-size: 26px;
   line-height: 37px;
-  width: 560px;
+  width: 550px;
+  margin-left: 35px;
 }
 
 .subscribe__text p {
@@ -705,17 +706,18 @@ a {
 }
 
 .subscribe__form-police input {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
 }
 
 .subscribe__form-police label {
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 .subscribe__form-police a {
   color: #cccaca;
   font-family: 'Montserrat', sans-serif;
+  font-size: 13px;
   text-decoration: none;
   margin-bottom: 3px;
 }
