--- a/scss/_subscribe.scss
+++ b/scss/_subscribe.scss
@@ -23,7 +23,8 @@
 	font-family: 'Montserrat', sans-serif;
 	font-size: 26px;
 	line-height: 37px;
-	width: 560px;
+	width: 550px;
+	margin-left: 35px;
 
 	& p {
 		font-size: 14px;
@@ -65,17 +66,18 @@
 	margin-top: 20px;
 
 	& input {
-		width: 10px;
-		height: 10px;
+		width: 20px;
+		height: 20px;
 	}
 
 	& label {
-		margin-left: 15px;
+		margin-left: 10px;
 	}
 
 	& a {
 		color: $dark-gray;
 		font-family: 'Montserrat', sans-serif;
+		font-size: 13px;
 		text-decoration: none;
 		margin-bottom: 3px;
 	}
