--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -109,6 +109,12 @@
 	}
 }
 
+.header__searh-wrap {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+}
+
 .header__bookmarks {
 	width: 30px;
 	height: 30px;
