--- a/scss/_subscribe.scss
+++ b/scss/_subscribe.scss
@@ -6,11 +6,13 @@
 	background-size: cover;
 	height: 280px;
 	width: 100%;
+	position: relative;
 }
 
 .subscribe__items {
 	position: absolute;
 	top: 70px;
+	left: 0;
 	width: 100%;
 	display: flex;
 	justify-content: space-around;
@@ -23,7 +25,7 @@
 	font-family: 'Montserrat', sans-serif;
 	font-size: 26px;
 	line-height: 37px;
-	width: 550px;
+	max-width: 550px;
 	margin-left: 35px;
 
 	& p {
@@ -32,21 +34,24 @@
 }
 
 .subscribe__form {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	max-width: 445px;
 
 	& img {
 		position: absolute;
 		width: 20px;
 		height: 20px;
-		top: 24px;
-		right: 75px;
+		top: 18%;
+		right: 5%;
 		z-index: 5;
 	}
 
 	& input {
-		width: 445px;
+		max-width: 445px;
+		width: 100%;
 		height: 55px;
 		background-color: #ffffff;
 		padding: 0 20px;
