--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -126,6 +126,7 @@
 }
 
 .header__cart {
+	position: relative;
 	width: 30px;
 	height: 30px;
 	margin-left: 25px;
@@ -134,6 +135,25 @@
 		width: 100%;
 	}
 }
+
+
+.counter {
+	position: absolute;
+	top: -2px;
+	right: -5px;
+	height: 18px;
+	border-radius: 9px;
+	padding: 0px 4px;
+	background-color:
+		rgb(238, 6, 74);
+	color: rgb(244, 244, 244);
+	font-size: 14px;
+	line-height: 17px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	z-index: 3;
+}
+
 
 .header-menu {
 	display: none;
