--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -10,3 +10,11 @@ $descr: #3d3d3d;
 $descr-light: #757575;
 $brand-bg: #f8f8f8;
 $bord-check: #b1b1b1;
+$blue: #524fb0;
+$green: #55c660;
+$gray-p: #cdcdcd;
+$azure: #68a5f0;
+$brown: #ad7b2c;
+$orange: #e58e28;
+$yellow: #e5d01c;
+$gray-button: #949494;
