--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -20,6 +20,11 @@ a {
   padding: 0;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+
 li {
   list-style-type: none;
 }
@@ -897,9 +902,12 @@ li {
   font-size: 30px;
 }
 
+.filter-size__wrap {
+  width: 275px;
+}
+
 .for-brand {
   position: relative;
-  width: 275px;
   height: 345px;
   background-color: #f8f8f8;
   padding: 35px 15px 0 25px;
@@ -971,6 +979,303 @@ li {
 
 .check__input:checked + .check__label::after {
   opacity: 1;
+}
+
+.for-price {
+  padding-top: 20px;
+}
+
+.for-price h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  color: #3d3d3d;
+  margin-left: 30px;
+}
+
+.for-price__rang {
+  width: 275px;
+  height: 90px;
+  position: relative;
+  display: block;
+}
+
+.for-size {
+  padding-top: 30px;
+}
+
+.for-size h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  color: #3d3d3d;
+  margin-left: 30px;
+}
+
+.for-size__palett {
+  position: relative;
+  height: 140px;
+  background-color: #f8f8f8;
+  padding: 30px 27px;
+}
+
+.for-size__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 0;
+  margin: 0;
+}
+
+.for-size__list .check__size {
+  position: relative;
+  display: block;
+  margin: 10px 0;
+  width: 60px;
+}
+
+.for-size__list .check__label {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  text-transform: uppercase;
+  color: #3d3d3d;
+  padding-left: 30px;
+}
+
+.for-size__list .check__label::before {
+  content: "";
+  width: 23px;
+  height: 23px;
+  display: block;
+  border: 3px solid #b1b1b1;
+  border-radius: 4px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.for-size__list .check__label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 2;
+  background: url("../img/confirm.svg") no-repeat;
+  background-size: 13px 13px;
+  opacity: 0;
+}
+
+.for-size__list-up,
+.for-size__list-down {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.for-color {
+  padding-top: 30px;
+}
+
+.for-color h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  color: #3d3d3d;
+  margin-left: 30px;
+}
+
+.for-color__palett {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 140px;
+  background-color: #f8f8f8;
+  padding: 25px;
+}
+
+.for-color__line-up,
+.for-color__line-down {
+  max-width: 190px;
+  width: 100%;
+  height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.for-color__choice {
+  position: relative;
+}
+
+.for-color__choice .for-color__check {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: absolute;
+}
+
+.for-color__check:checked + .for-color__label::before {
+  border: 3px solid #d44343;
+}
+
+.for-color__check:checked + .for-color__label::after {
+  opacity: 1;
+}
+
+.black::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #191919;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.white::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.red::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #d44343;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.blue::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #524fb0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.green::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #55c660;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.gray::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #cdcdcd;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.azure::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #68a5f0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.brown::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #ad7b2c;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.orange::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #e58e28;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.yellow::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: #e5d01c;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.filter-size__button {
+  margin-top: 30px;
+  background-color: #949494;
+  color: #ffffff;
+  border-radius: 5px;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  padding: 10px;
 }
 
 @media (max-width: 1240px) {
